# eest-fuzz

./: .gitignore  README.md  pyproject.toml
src/eest_fuzz/: __init__.py  _annotation.py  _enum.py  _model.py  _utils.py  destructure.py  fuzz.py  registry.py
src/eest_fuzz/cmd/: destructure.py  fuzz_eels.py  fuzz_self.py  structure.py
tests/: test__annotation.py  test_destructure.py  test_registry.py
